@@ -18,6 +18,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'  // Hibernate 6.0.2 이상
 	implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 드라이버 추가
+	implementation 'org.hibernate.validator:hibernate-validator:7.0.5.Final' // Hibernate Validator 추가
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2' // Jakarta Validation API
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// queryDSL
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
@@ -29,11 +32,8 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
 
-
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
-
-	implementation 'org.hibernate:hibernate-core:5.6.9.Final'
 
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.9'
@@ -41,10 +41,24 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+clean {
+	delete fileTree(dir: 'src/main/generated', include: '**/*.java')
+}
+
+tasks.withType(JavaCompile) {
+	options.compilerArgs += [
+			'--add-opens',
+			'java.base/java.lang=ALL-UNNAMED',
+			'--add-opens',
+			'java.base/java.util=ALL-UNNAMED'
+	]
+}
+
+
 sourceSets {
 	main {
 		java {
-			srcDirs = ['src/main/java', 'src/main/resources']
+			srcDirs = ['src/main/java', 'src/main/resources', 'src/main/generated']
 		}
 	}
 }
@@ -54,7 +68,7 @@ tasks.named('test') {
 }
 
 // Querydsl 설정부
-def generated = 'src/main/generated/querydsl'
+def generated = 'src/main/generated'
 
 querydsl {
 	jpa = true
